--- a/src/app/components/admin/admin/admin.component.html
+++ b/src/app/components/admin/admin/admin.component.html
@@ -1,2 +1,5 @@
-<app-aside *ngIf="toggleAside()"></app-aside>
-<router-outlet></router-outlet>
+<app-header></app-header>
+<div class="BackgroundColor">
+    <app-aside></app-aside>
+    <router-outlet></router-outlet>
+</div>
