--- a/src/app/components/admin/aside/aside.component.html
+++ b/src/app/components/admin/aside/aside.component.html
@@ -1,28 +1,28 @@
 <aside>
     <ul>
-        <li [id]="focusedItem === 'dashboard' ? 'focus' : null">
-            <a routerLink="/admin/dashboard" (click)="ChangeFocus('dashboard')"><p>DashBoard</p></a>
+        <li [id]="focusedItem === 'dashboard' ? 'focus' : null" class="BackgroundColorLight">
+            <a routerLink="/admin/dashboard" (click)="ChangeFocus('dashboard')" class="Small"><p>DashBoard</p></a>
         </li>
-        <li [id]="focusedItem === 'head' ? 'focus' : null">
-            <a routerLink="/admin/head" (click)="ChangeFocus('head')"><p>Head</p></a>
+        <li [id]="focusedItem === 'head' ? 'focus' : null" class="BackgroundColorLight">
+            <a routerLink="/admin/head" (click)="ChangeFocus('head')" class="Small"><p>Head</p></a>
         </li>
-        <li [id]="focusedItem === 'head-foot' ? 'focus' : null">
-            <a routerLink="/admin/head-foot" (click)="ChangeFocus('head-foot')"><p>Header/Footer</p></a>
+        <li [id]="focusedItem === 'head-foot' ? 'focus' : null" class="BackgroundColorLight">
+            <a routerLink="/admin/head-foot" (click)="ChangeFocus('head-foot')" class="Small"><p>Header/Footer</p></a>
         </li>
-        <li [id]="focusedItem === 'pages' ? 'focus' : null">
-            <a routerLink="/admin/pages" (click)="ChangeFocus('pages')"><p>Pages</p> <p>{{pages}}</p></a>
+        <li [id]="focusedItem === 'pages' ? 'focus' : null" class="BackgroundColorLight">
+            <a routerLink="/admin/pages" (click)="ChangeFocus('pages')" class="Small"><p>Pages</p> <p>{{pages}}</p></a>
         </li>
-        <li [id]="focusedItem === 'files' ? 'focus' : null">
-            <a routerLink="/admin/files" (click)="ChangeFocus('files')"><p>Files</p> <p>{{files}}</p></a>
+        <li [id]="focusedItem === 'files' ? 'focus' : null" class="BackgroundColorLight">
+            <a routerLink="/admin/files" (click)="ChangeFocus('files')" class="Small"><p>Files</p> <p>{{files}}</p></a>
         </li>
-        <li [id]="focusedItem === 'templates' ? 'focus' : null">
-            <a routerLink="/admin/templates" (click)="ChangeFocus('templates')"><p>Templates</p> <p>{{templates}}</p></a>
+        <li [id]="focusedItem === 'templates' ? 'focus' : null" class="BackgroundColorLight">
+            <a routerLink="/admin/templates" (click)="ChangeFocus('templates')" class="Small"><p>Templates</p> <p>{{templates}}</p></a>
         </li>
-        <li [id]="focusedItem === 'database' ? 'focus' : null">
-            <a routerLink="/admin/database" (click)="ChangeFocus('database')"><p>Database</p></a>
+        <li [id]="focusedItem === 'database' ? 'focus' : null" class="BackgroundColorLight">
+            <a routerLink="/admin/database" (click)="ChangeFocus('database')" class="Small"><p>Database</p></a>
         </li>
-        <li [id]="focusedItem === 'faq' ? 'focus' : null">
-            <a routerLink="/admin/faq" (click)="ChangeFocus('faq')"><p>FAQ</p></a>
+        <li [id]="focusedItem === 'faq' ? 'focus' : null" class="BackgroundColorLight">
+            <a routerLink="/admin/faq" (click)="ChangeFocus('faq')" class="Small"><p>FAQ</p></a>
         </li>
     </ul>
 </aside>
