--- a/src/app/components/admin/head/head.component.scss
+++ b/src/app/components/admin/head/head.component.scss
@@ -1,5 +1,4 @@
-$size-index: calc(1vw + 1vh);
-$color: rgba(114, 48, 180, 0.68);
+@import "../../../../styles.scss";
 :host {
     flex-grow: 1;
     max-width: 86%;
@@ -8,20 +7,10 @@ $color: rgba(114, 48, 180, 0.68);
     padding-top: 0px;
     display: flex;
     flex-direction: column;
-    color: rgb(153, 102, 204);
 }
-h2 {
-    margin: 0px;
-    width: 100%;
-    text-transform: uppercase;
-    font-family: "Asap", sans-serif;
-    font-weight: 500;
-    letter-spacing: 3px;
-    font-size: calc($size-index * 2.2);
-}
+
 .block {
     height: 100%;
-    background-color: rgb(51, 51, 51);
     padding: 10px 20px;
     box-sizing: border-box;
     border: 3px solid $color;
@@ -137,12 +126,20 @@ button, .button {
         display: flex;
         align-items: end;
         .group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: start;
             height: 100%;
             margin-right: 20px;
             .col{
+                width: 100%;
                 margin-bottom: 10px;
                 display: flex;
                 flex-direction: column;
+                &:nth-child(2){
+                    flex-grow: 1;
+                }
                 input, textarea{
                     background-color: rgb(41, 41, 41);
                     outline: none;
@@ -153,6 +150,13 @@ button, .button {
                 }
                 textarea{
                     height: 10vh;
+                    flex-grow: 1;
+                }
+                &>div{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    width: 100%;
                 }
             }
             h4{
@@ -180,6 +184,22 @@ button, .button {
             .tags-container{
                 display: flex;
                 flex-wrap: wrap;
+                overflow: scroll;
+                &::-webkit-scrollbar{
+                    display: none;
+                }
+                .tag{
+                    width: min-content;
+                    padding: 10px;
+                    margin: 5px;
+                    cursor: pointer;
+                    border-radius: 10px;
+                    border: 3px solid;
+                    p{
+                        margin: 0;
+                        color: white;
+                    }
+                }
             }
         }
     }
