--- a/src/app/components/admin/header-footer/header-footer.component.html
+++ b/src/app/components/admin/header-footer/header-footer.component.html
@@ -1,8 +1,6 @@
 <app-edit-config-forms></app-edit-config-forms>
-
-
 <div class="constructor">
-    <h2>Header/Footer constructor</h2>
+    <h2 class="Color Large">Header/Footer constructor</h2>
     <div class="constructorMain">
         <div class="clone-container" id="clone-container"></div>
         <header class="element header" dropzone="true" placeholder="header"></header>
