--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header *ngIf="ChangerHome()">
+<header class="BackgroundColorDark" *ngIf="ChangerHome()">
     <div class="logo">
         <a [routerLink]="link">
             <img src="assets/imgs/logo.svg" alt="">
