--- a/src/app/components/admin/dashboard/dashboard.component.scss
+++ b/src/app/components/admin/dashboard/dashboard.component.scss
@@ -1,41 +1,25 @@
-$size-index: calc(1vw + 1vh);
-$color:rgba(114, 48, 180, 0.68);
+@import "../../../../styles.scss";
 :host{
     flex-grow: 1;
     max-width: 86%;
+    height: 95%;
     box-sizing: border-box;
     padding: 35px;
     padding-top: 0px;
     display: flex;
     flex-direction: column;
-    color: rgb(153, 102, 204);
 }
 .block{
-    background-color: rgb(51, 51, 51);
-    padding: 10px 20px;
-    box-sizing: border-box;
-    border: 3px solid $color;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: start;
-    border-radius: 5px;
-    h3{
-        width: 100%;
-        margin: 0px;
-        font-size: calc($size-index * 1.3);
-        font-weight: 600;
-    }
-    
-}
-h2{
-    margin: 0px;
-    width: 100%;
-    text-transform: uppercase;
-    font-family: "Asap", sans-serif;
-    font-weight: 500;
-    letter-spacing: 3px;
-    font-size: calc($size-index * 2.2);
+    background-color: rgb(51, 51, 51);
+    padding: 10px 20px;
+    flex-wrap: wrap;
+    border-radius: 10px;
+    border: 5px solid;
+    flex-grow: 1;
+    margin: 10px;
 }
 #stats-actions{
     width: 100%;
@@ -58,6 +42,8 @@ h2{
                 display: flex;
                 align-items: center;
                 margin: 0px 5px;
+                flex-grow: 1;
+                width: max-content;
                 p{
                     margin: 0px;
                     margin-left: 5px;
@@ -70,17 +56,14 @@ h2{
             text-align: center;
             margin: 0px;
             text-decoration: none;
-            border: 4px solid $color;
             border-radius: 10px;
-            background-color: rgb(41, 41, 41);
+            border: 4px solid;
             padding: 10px 5%;
-            color: rgb(153, 102, 204);
             max-width: 30%;
         }
     }
     #actions{
         width: 100%;
-        height: 85%;
         display: flex;
         align-items: start;
         flex-wrap: wrap;
@@ -89,18 +72,17 @@ h2{
         
         .action{
             display: flex;
-            flex-direction: column;
             align-items: center;
+            justify-content: center;
+            width: 30%;
             margin: 5px;
             padding: 10px;
             border-radius: 10px;
             border: 3px solid $color;
-            background-color: rgb(41, 41, 41);
-            width: 26%;
             cursor: pointer;
+            flex-grow: 1;
             p{
                 margin: 0px;
-                font-size: calc($size-index * 0.75);
             }
         }
     }
@@ -113,8 +95,9 @@ h2{
 }
 #wishes{
     width: 100%;
-    height: 45%;
+    height: 40%;
     margin-top: 20px;
+    padding: 20px;
     form{
         width: 100%;
         height: 100%;
@@ -131,15 +114,18 @@ h2{
         textarea{
             resize: none;
             width: 80%;
-            height: 20vh;
+            height: 80%;
             margin-top: 10px;
             outline: none;
-            border: 3px solid $color;
+            border: 3px solid;
             padding: 10px;
             box-sizing: border-box;
             background-color: rgb(41, 41, 41);
             color: white;
             font-size: calc($size-index * 1);
+            &::placeholder{
+                color: $color-opacity;
+            }
         }
         button{
             text-transform: uppercase;
