--- a/src/app/components/admin/edit-config-forms/edit-config-forms.component.scss
+++ b/src/app/components/admin/edit-config-forms/edit-config-forms.component.scss
@@ -1,12 +1,11 @@
-$color: rgba(142, 61, 222, .68);
-$size-index: calc(1vw + 1vh);
+@import "../../../../styles.scss";
 .forms{
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     width: 100%;
     height: 100%;
-    z-index: 3;
+    z-index: 5;
     perspective: 100px;
     transition-property: opacity;
     transition-duration: 0.5s;
@@ -38,7 +37,7 @@ $size-index: calc(1vw + 1vh);
             width: 30%;
             text-align: center;
             &:hover{
-                background-color: rgba(142, 61, 222, .102);
+                background-color: $color-opacity-opacity;
             }
         }
     }
@@ -47,7 +46,7 @@ $size-index: calc(1vw + 1vh);
         display: flex;
         flex-direction: column;
         backface-visibility: hidden;
-        background-color: whitesmoke;
+        background-color: rgb(238, 238, 238);
         border: 20px groove $color;
         border-radius: 20px;
         transition-property: transform;
@@ -60,7 +59,7 @@ $size-index: calc(1vw + 1vh);
             padding: 0px 10px;
             box-sizing: border-box;
             h2{
-                font-size: calc($size-index * 2);
+                text-transform: uppercase;
             }
             h2, p{
                 margin: 0px;
@@ -90,7 +89,7 @@ $size-index: calc(1vw + 1vh);
                         margin: 0px;
                         cursor: pointer;
                         &:hover{
-                            background-color: rgba(142, 61, 222, .3);
+                            background-color: $color-opacity-opacity;
                         }
                     }
                 }
@@ -136,8 +135,10 @@ $size-index: calc(1vw + 1vh);
                             display: flex;
                             align-items: center;
                             margin: 5px 0px;
+                            .label{
+                                width: fit-content;
+                            }
                             p, input, select, textarea{
-                                font-size: calc($size-index * .8);
                                 margin: 0px;
                                 background: none;
                                 outline: none;
@@ -163,7 +164,6 @@ $size-index: calc(1vw + 1vh);
                     }
                 }
                 &>p{
-                    font-size: calc($size-index * 1);
                     margin: 0;
                 }
             }
@@ -193,6 +193,7 @@ $size-index: calc(1vw + 1vh);
                 cursor: pointer;
                 transition-duration: .5s;
                 margin: 10px 0px;
+                background-color: $color-opacity-opacity;
                 &:hover{
                     color: white;
                     background-color: $color;
@@ -228,7 +229,7 @@ $size-index: calc(1vw + 1vh);
                 }
                 
                 &::-webkit-scrollbar-thumb:hover {
-                    background-color: rgba(142, 61, 222, 0.802); /* Цвет ползунка при наведении */
+                    background-color: $color-hover; /* Цвет ползунка при наведении */
                 }
             }
         }
