--- a/src/app/components/admin/files/files.component.html
+++ b/src/app/components/admin/files/files.component.html
@@ -1,1 +1,82 @@
-<p>files works!</p>
+<h2 class="Color Large">Files</h2>
+<div class="mainDirs BackgroundColorLight">
+    <p>main dirs:</p>
+    <ul>
+        <li class="Tiny" (click)="changeFilesDirs('imgs-uploads')" [ngStyle]="{'background-color': dirName == 'imgs-uploads'? 'rgba(255, 255, 255, 0.1':''}">
+            <p>uploads</p>
+        </li>
+        <li class="Tiny" (click)="changeFilesDirs('imgs-swipers')" [ngStyle]="{'background-color': dirName == 'imgs-swipers'? 'rgba(255, 255, 255, 0.1':''}">
+            <p>swiper</p>
+        </li>
+        <li class="Tiny" (click)="changeFilesDirs('css')" [ngStyle]="{'background-color': dirName == 'css'? 'rgba(255, 255, 255, 0.1':''}">
+            <p>css</p>
+        </li>
+        <li class="Tiny" (click)="changeFilesDirs('js')" [ngStyle]="{'background-color': dirName == 'js'? 'rgba(255, 255, 255, 0.1':''}">
+            <p>js</p>
+        </li>
+        <li class="Tiny" (click)="changeFilesDirs('videos')" [ngStyle]="{'background-color': dirName == 'videos'? 'rgba(255, 255, 255, 0.1':''}">
+            <p>videos</p>
+        </li>
+        <li class="Tiny" (click)="changeFilesDirs('archives')" [ngStyle]="{'background-color': dirName == 'archives'? 'rgba(255, 255, 255, 0.1':''}">
+            <p>archives</p>
+        </li>
+    </ul>
+</div>
+<div class="files-dirs BackgroundColorLight" [ngStyle]="{'width': selectedDir? '100%':'0%'}">
+    <header class="BackgroundColorLight">
+        <div class="search" >
+            <input class="Small BackgroundColor" type="text" placeholder="search files (name/date/type)" (input)="searchFiles($event)">
+            <div class="upload" *ngIf="dirName != 'imgs-swipers'">
+                <div class="image" *ngIf="imgPreviewStatus? 1:0">
+                    <p (click)="fileImages.click()">upload file</p>
+                    <input type="file" #fileImages  accept="image/*" multiple (change)="createImageFile($event)">
+                </div>
+                <div class="css"  *ngIf="dirName.includes('css')">
+                    <p (click)="fileCSS.click()">upload file</p>
+                    <input type="file" #fileCSS accept=".css" multiple (change)="createOtherFile($event)">
+                </div>
+                <div class="js" *ngIf="dirName.includes('js')">
+                    <p (click)="fileJS.click()">upload file</p>
+                    <input type="file" #fileJS accept=".js" multiple (change)="createOtherFile($event)">
+                </div>
+                <div class="videos" *ngIf="dirName.includes('videos')">
+                    <p (click)="fileVideos.click()">upload file</p>
+                    <input type="file" #fileVideos accept="video/*" multiple (change)="createOtherFile($event)">
+                </div>
+                <div class="archives" *ngIf="dirName.includes('archives')">
+                    <p (click)="fileArchives.click()">upload file</p>
+                    <input type="file" #fileArchives accept=".zip,.rar" multiple (change)="createOtherFile($event)">
+                </div>
+            </div>
+            <p *ngIf="dirName == 'imgs-swipers'">create folder</p>
+        </div>
+        <div class="columnTitle">
+            <p class="Color Small">name</p>
+            <p class="Color Small">type</p>
+            <p class="Color Small">created date</p>
+            <p class="Color Small">updated date</p>
+            <p class="Color Small" *ngIf="imgPreviewStatus">preview</p>
+            <hr>
+        </div>
+    </header>
+    <section *ngFor="let item of showFiles">
+        <div class="file" [attr.fileSize]="(item.fileSize/1024).toFixed(2)+'KB'" [attr.fileResolution]="item.fileResolution">
+            <input class="Color Small" type="text" [value]="item.aliasName.split('.')[0]" [attr.currentName]="item.aliasName" (change)="changeFileName($event)">
+            <p class="Color Small">{{item.fileName.split(".").pop()}}</p>
+            <p class="Meta Small">{{item.createdAt.split("T")[0]}}</p>
+            <p class="Meta Small">{{item.updatedAt.split("T")[0]}}</p>
+            <img src="{{item.path}}" alt="" *ngIf="imgPreviewStatus">
+            <div class="funcBtn">
+                <img src="./assets/imgs/files/editor.png" alt="" *ngIf="!imgPreviewStatus">
+                <img src="./assets/imgs/files/delete.png" alt="" (click)="deleteFile(item.id)">
+            </div>
+        </div>
+    </section>
+    <!-- <section *ngFor="let item of showFolders">
+        <div class="folder" >
+            <p>{{item.name.split('&')[1]}}</p>
+            <p>{{item.createdDate}}</p>
+            <p>{{item.updatedDate}}</p>
+        </div>
+    </section> -->
+</div>
