--- a/src/app/components/admin/header-footer/header-footer.component.scss
+++ b/src/app/components/admin/header-footer/header-footer.component.scss
@@ -1,33 +1,20 @@
-$color: rgba(114, 48, 180, 0.68);
-$size-index: calc(1vw + 1vh);
+@import "../../../../styles.scss";
 :host {
     position: relative;
     flex-grow: 1;
     max-width: 86%;
-    height: calc(100vh - $size-index * 4.5);
     box-sizing: border-box;
     padding-left: 35px;
     display: flex;
     align-items: start;
     justify-content: space-between;
     flex-wrap: wrap;
-    color: rgb(153, 102, 204);
     overflow: scroll;
     &::-webkit-scrollbar{
         display: none;
     }
 }
 
-h2{
-    margin: 0px;
-    width: 100%;
-    height: 10vh;
-    text-transform: uppercase;
-    font-family: "Asap", sans-serif;
-    font-weight: 500;
-    letter-spacing: 3px;
-    font-size: calc($size-index * 2.2);
-}
 .element{
     box-shadow: inset 0px 0px 10px $color;
 }
