--- a/src/app/components/admin/pages/pages.component.html
+++ b/src/app/components/admin/pages/pages.component.html
@@ -1,21 +1,20 @@
 <div id="search">
-    <form class="left">
-        <h2>Pages</h2>
+    <form>
+        <h2 class="Color Large">Pages</h2>
         <div class="searchField">
-            <input type="text" name="pageNameSearch" id="pageNameSearch" placeholder="search pages" (input)="searchPages($event)">
-            <!-- <img src="./assets/imgs/search.png" alt=""> -->
+            <input class="Small" type="text" name="pageNameSearch" id="pageNameSearch" placeholder="search pages" (input)="searchPages($event)">
         </div>
     </form>
-    <div class="right">
+    <div>
         <div class="btn">
-            <p (click)="togglePageNameForm()">create page</p>
+            <p class="Small" (click)="togglePageNameForm()">create page</p>
             <form [formGroup]="createrPages" id="createrPages" (submit)="createPage()" [ngStyle]="{'height': pageNameFormToggle? '50px': '0px', 'pointer-events': pageNameFormToggle? 'all': 'none', 'opacity': pageNameFormToggle? '1': '0'}">
                 <input type="text" id="pageName" required formControlName="pageName" [ngStyle]="{'color': errorPageName ? 'red': 'white'}">
-                <button [disabled]="!createrPages.valid">create</button>
+                <button class="ColorBackgroundOpacityOpacity" [disabled]="!createrPages.valid">create</button>
             </form>
         </div>
         <div class="btn">
-            <p (click)="updateCardsSnapshot()" >update cards</p>
+            <p class="Small" (click)="updateCardsSnapshot()" >update cards</p>
         </div>
     </div>
 </div>
@@ -25,7 +24,7 @@
            <a [ngStyle]="{'justify-content': item.pageImg == null? 'end': 'space-between'}" [routerLink]="['./', item.pageName]">
                 <img src="{{item.pageImg}}" *ngIf="item.pageImg != null && item.pageImg.length > 0" alt="">
                 <div class="des">
-                    <p class="name">{{item.pageName}}</p>
+                    <p class="name Color Small">{{item.pageName}}</p>
                 </div>
            </a>
         </article>
