--- a/src/app/components/admin/pages/pages.component.scss
+++ b/src/app/components/admin/pages/pages.component.scss
@@ -1,5 +1,4 @@
-$color: rgba(114, 48, 180, 0.68);
-$size-index: calc(1vw + 1vh);
+@import "../../../../styles.scss";
 :host{
     flex-grow: 1;
     max-width: 86%;
@@ -10,102 +9,94 @@ $size-index: calc(1vw + 1vh);
     flex-direction: column;
     align-items: center;
     position: relative;
-    color: rgb(153, 102, 204);
 }
 
 #search{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 15%;
-    .left, .right{
-        height: 100%;
+    form{
         display: flex;
+        width: 50%;
+        h2{
+            width: fit-content;
+        }
+    }
+    &>div{
+        display: flex;
+        justify-content: end;
+        align-items: start;
+    }
+    .btn{
+        width: 18vw;
+        display: flex;
+        justify-content: center;
         align-items: center;
-    }
-    .left{
-        float: left;
-    }
-    .right{
-        float: right;
-        .btn{
-            width: 18vw;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0px 20px;
-            overflow: visible;
-            position: relative;
-            p{
-                width: 100%;
-                padding: 10px 40px;
-                text-transform: uppercase;
-                background-color: $color;
-                color: white;
-                border-radius: 20px;
-                font-size: calc($size-index * 1);
-                cursor: pointer;
-                transition-duration: 0.5s;
-                text-align: center;
-                margin: 0px;
-                &:hover{
-                    scale: 1.1;
-                }
+        margin: 0px 20px;
+        overflow: visible;
+        position: relative;
+        p{
+            width: 100%;
+            padding: 10px 40px;
+            text-transform: uppercase;
+            background-color: $color;
+            color: white;
+            border-radius: 20px;
+            cursor: pointer;
+            transition-duration: 0.5s;
+            text-align: center;
+            margin: 0px;
+            &:hover{
+                scale: 1.1;
             }
-            #createrPages{
-                position: absolute;
-                width: 120%;
-                display: flex;
-                align-items: start;
-                overflow: hidden;
+        }
+        #createrPages{
+            position: absolute;
+            width: 120%;
+            display: flex;
+            align-items: start;
+            overflow: hidden;
+            transition-duration: 0.5s;
+            transform-origin: top ;
+            transform: translate(0%, 110%);
+            z-index: 2;
+            input{
+                height: 100%;
+                width: 80%;
+                box-sizing: border-box;
+                background-color: rgb(51, 51, 51);
+                border: 3px solid $color;
+                border-right: none;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
+                outline: none;
+                padding-left: 10px;
+                box-sizing: border-box;
+                color: white;
+            }
+            button{
+                width: 20%;
+                height: 100%;
+                outline: none;
+                border: 3px solid $color;
+                border-left: none;
+                color: white;
+                text-transform: uppercase;
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+                font-weight: 600;
                 transition-duration: 0.5s;
-                transform-origin: top ;
-                transform: translate(0%, 110%);
-                z-index: 2;
-                input{
-                    height: 100%;
-                    width: 80%;
-                    box-sizing: border-box;
-                    background-color: rgb(51, 51, 51);
-                    border: 3px solid $color;
-                    border-right: none;
-                    border-top-left-radius: 10px;
-                    border-bottom-left-radius: 10px;
-                    font-size: calc($size-index * 0.9);
-                    outline: none;
-                    padding-left: 10px;
-                    box-sizing: border-box;
-                    color: white;
+                &:disabled{
+                    background-color: $color-opacity;
+                    color: rgb(227, 225, 225);
                 }
-                button{
-                    width: 20%;
-                    height: 100%;
-                    outline: none;
-                    border: 3px solid $color;
-                    border-left: none;
-                    color: white;
-                    background-color: $color;
-                    text-transform: uppercase;
-                    border-top-right-radius: 10px;
-                    border-bottom-right-radius: 10px;
-                    font-weight: 600;
-                    transition-duration: 0.5s;
-                    &:disabled{
-                        background-color: rgba(78, 32, 125, 0.68);
-                        color: rgb(227, 225, 225);
-                    }
-                    &:not(:disabled){
-                        cursor: pointer;
-                    }
+                &:not(:disabled){
+                    cursor: pointer;
                 }
             }
         }
-    }
-    h2{
-        margin: 0px;
-        text-transform: uppercase;
-        font-family: "Asap", sans-serif;
-        font-weight: 500;
-        letter-spacing: 3px;
-        font-size: calc($size-index * 2.2);
     }
     .searchField{
         display: flex;
@@ -113,8 +104,8 @@ $size-index: calc(1vw + 1vh);
         height: 50%;
         margin-left: 20px;
         overflow: hidden;
+        flex-grow: 1;
         input{
-            font-size: calc($size-index * 0.9);
             position: relative;
             border: none;
             outline: none;
@@ -151,13 +142,14 @@ section{
         justify-content: start;
         flex-wrap: wrap;
         article{
+            position: relative;
             width: 23%;
             height: 45%;
             margin: 1%;
             display: flex;
             align-items: center;
             justify-content: center;
-            position: relative;
+            transition-duration: .5s;
             a{
                 position: absolute;
                 width: 100%;
@@ -191,24 +183,16 @@ section{
                         margin: 0px;
                         text-align: center;
                         text-transform: capitalize;
-                        font-size: calc($size-index * 1);
                         transition-duration: 0.3s;
                         color: $color;
                         text-decoration: none !important;
     
                     }
                 }
-                &:hover{
-                    width: 110%;
-                    height: 110%;
-                    z-index: 2;
-                    .des{
-
-                        p{
-                            font-size: calc($size-index * 1.1);
-                        }
-                    }
-                }
+            }
+            &:hover{
+                z-index: 2;
+                scale: 1.1;
             }
         }
     }
