--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
-$color: rgba(142, 61, 222, .68);
+
+$color: rgb(52, 178, 169);
+$color-hover: rgb(35, 217, 205);
+$color-opacity: rgba(51, 220, 208, .6);
+$color-opacity-hover: rgba(35, 217, 205, 0.6);
+$color-opacity-opacity: rgba(51, 220, 208, .3);
 $size-index: calc(1vw + 1vh);
 html,
 body {
@@ -20,8 +25,8 @@ body {
     top: 0px;
     pointer-events: none;
     &>.element{
-        width: 15vw;
-        height: 10vh;
+        width: 15vw !important;
+        height: 10vh !important;
         pointer-events: none;
         transition-duration: 0s !important;
         transform: translate(-50%, -50%);
@@ -99,7 +104,7 @@ body {
             cursor: pointer;
             transition-duration: 0.5s;
             &:hover{
-                background-color: rgb(142, 61, 222);
+                background-color: $color;
                 color: white;
                 scale: 1.1;
             }
@@ -175,7 +180,7 @@ section, .title, .paragraph, .img, .list, .btn{
         font-weight: 700;
         transform: translate(-50%, -50%);
         pointer-events: none;
-        color: rgba(142, 61, 222, 0.416);
+        color: $color-opacity;
         z-index: 0;
     }
     &>.borders, &>.funcBtns{
@@ -214,14 +219,14 @@ section, .title, .paragraph, .img, .list, .btn{
         height: 100%;
         .border1, .border2, .border3, .border4{
             position: absolute;
-            background-color: rgba(144, 0, 255, .6);
             cursor: pointer;
-            box-shadow: 0px 0px 0px rgba(154, 29, 250, .6);
+            background-color: $color-opacity;
+            box-shadow: 0px 0px 0px $color-opacity;
             transition-duration: .5s;
             pointer-events: all;
             &:hover{
-                background-color: rgba(154, 29, 250, .6);
-                box-shadow: 0px 0px 5px rgba(154, 29, 250, .6);
+                background-color: $color-hover;
+                box-shadow: 0px 0px 5px $color-opacity-hover;
                 z-index: 1;
             }
         }
@@ -279,5 +284,73 @@ section, .title, .paragraph, .img, .list, .btn{
     transform: rotateY(180deg);
 }
 .selectedStyle{
-    background-color: rgba(142, 61, 222, .2);
+    background-color: $color-opacity-opacity;
+}
+
+.Color{
+    color: $color;
+}
+.OpacityColor{
+    color: $color-opacity;
+}
+.Meta{
+    color: gray;
+}
+.BorderColor{
+    border-color: $color !important;
+}
+.OpacityBorderColor{
+    border-color: $color-opacity !important;
+}
+.ColorBackground{
+    background-color: $color;
+}
+.ColorBackgroundOpacity{
+    background-color: $color-opacity;
+}
+.ColorBackgroundOpacityOpacity{
+    background-color: $color-opacity-opacity;
+}
+.BackgroundColor{
+    background-color: rgb(40, 40, 40);
+}
+.BackgroundColorLight{
+    background-color: rgb(50, 50, 50);
+}
+.BackgroundColorDark{
+    background-color: rgb(30, 30, 30);
+}
+.BackgroundColorBtn{
+    background-color: rgb(37, 37, 37);
+}
+.Large, .Big, .Middle, .Small, .Tiny{
+    font-family: "Asap", sans-serif;
+    width: 100%;
+    margin: 0px;
+}
+.Large{
+    font-size: calc($size-index * 2);
+    font-weight: 600;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+.Big{
+    font-size: calc($size-index * 1.7);
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+.Middle{
+    font-size: calc($size-index * 1.2);
+    font-weight: 600;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+.Small{
+    font-size: calc($size-index * .9);
+    font-weight: 500;
+}
+.Tiny{
+    font-size: calc($size-index * .65);
+    font-weight: 400;
 }
